--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -227,7 +227,7 @@
         <div class="table-container">
           <!-- Logo Start -->
           <div class="col-table-cell col-lg-1 col-md-1 col-sm-12 col-xs-12 inner">
-            <div id="logo"><a href="index.html"><img class="img-responsive" src="assets/image/logo.png" width="200" title="MarketShop" alt="MarketShop" /></a></div>
+            <div id="logo"><a href="index.html"><img class="img-responsive" src="assets/image/logo.png" width="200" title="MarketShop" alt="Bremsen" /></a></div>
           </div>
           <!-- Logo End -->
           <!-- Mini Cart Start-->
