--- a/src/app/components/carro/carro.component.html
+++ b/src/app/components/carro/carro.component.html
@@ -61,7 +61,7 @@
                			<table>
                				<tr>
 								        <td><h4 class="tablacarro"><b>{{producto.totalParcial  | number | currencyFormat}}</b></h4></td>
-               					<td>&nbsp; &nbsp;<i style="color: red; font-size: 18px" class="fa fa-times-circle" (click)="eliminaProductoCarro(producto.idCarro)"></i></td>
+               					<td>&nbsp; &nbsp;<i style="color: red; font-size: 18px" class="fa fa-times-circle" (click)="eliminaProductoCarro(producto.idCarro,producto.ID)"></i></td>
                				</tr>
 
                			</table>
