cambios de cesar

--- a/src/app/components/carro/carro.component.html
+++ b/src/app/components/carro/carro.component.html
@@ -26,8 +26,8 @@
           <h2 class="titulo-light subtile">1- Neumáticos</h2>
 
 
-            <div class="table-responsive">
-              <table class="table table-bordered">
+            <div class="table-responsive tablaResponsiva">
+              <table class=" table table-bordered">
                 <thead>
                   <tr class="gris">
                     <td class="text-center"></td>
@@ -42,7 +42,7 @@
                   <tr class="borderTop" *ngFor="let producto of carroCompra">
                     <td class="text-center">
                       <a routerLink="/producto/{{producto.ID}}">
-                      <img src="assets/galerias/{{producto.JPG}}" width="45px" alt="" title="">
+                      <img src="assets/galerias/{{producto.JPG}}" width="40px" alt="" title="">
                     </a>
                     </td>
                     <td class="text-left">
