--- a/src/assets/css/stylesheet.css
+++ b/src/assets/css/stylesheet.css
@@ -1042,7 +1042,8 @@ visibility:hidden;
 	.bremsen3  {background-color:#383838; color:#ffffff; text-transform: uppercase;}
 	h1.nuestros-servicios  { text-transform: uppercase;  font-size: 50px; }
 
-
+	.redCompra { padding-left: 0px;}
+	.transferencia { padding-right: 0px;}
 
 
 	.owl-dots {
@@ -1146,7 +1147,8 @@ visibility:hidden;
 		.pad-responsivo { padding-top: 20px;}
 		.texto-tabs{ font-size:14px !important; }
 		.owl-nav  {display: none !important;}
-		.product-thumb h4 { height: 70px;}
+		/*.product-thumb h4 { height: 76px;}*/
+		h4.producto1 { height: 77px;}
 		.nav-tabs > li .btn-default { font-size: 9px;}
 		h4.tablacarro {font-size: 9px;}
 		.alinear { padding-left:0px !important; } 
@@ -1154,12 +1156,45 @@ visibility:hidden;
 		.owl-prev  { display: none;}
 		.owl-next  { display: none;}
 		.tabs1 {margin-top: 16px;}
+		span.verpro {font-size: 8px;}
+		.tablaResponsiva  { overflow-x:auto;}
+		
 	}
 
 	@media (max-width: 990px) {
 		.noView { display: none; }
+		.redCompra { padding: 0px;}
+	.transferencia { padding: 0px;}
 		
 	}
+
+	@media only screen and (max-width: 467px) and (min-width: 428px)
+{
+
+.tab22 {height: 65px;}
+.product-list .product-thumb h4 { padding-top: 25}
+
+}
+
+
+@media only screen and (max-width: 507px) and (min-width: 481px)
+{
+
+.tab22 {height: 70px;}
+
+
+}
+
+
+
+	
+	@media only screen and (max-width: 392px) and (min-width: 363px)
+	{
+
+		.tabchico { height: 75px;}
+		.product-list .product-thumb h4 { padding-bottom: 15px;}
+	}
+
 
 
 	@media (min-width: 990px) {
