--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -163,7 +163,7 @@ slideSpeed : 300, paginationSpeed : 400, singleItem : true}" [items]="productos"
         <div class="col-md-8">
           <div class="row">
             <div class="col-md-6 pad-upDown">
-               <a routerLink="/search/home/camioneta"><img class="img-responsive center-block " src="assets/image/OFERTA-V2.jpg"></a>
+               <a routerLink="/search/home/ofertas"><img class="img-responsive center-block " src="assets/image/OFERTA-V2.jpg"></a>
             </div>
             <div class="col-md-6">
               <a routerLink="/search/home/automovil"> <img class="img-responsive center-block " src="assets/image/AUTO.jpg"></a>
